# AutoForge

./: .gitignore  CONTRIBUTING.md  README.md  program.md  pyproject.toml
autoforge/: __init__.py  backtest.py  evaluate.py  optimize.py  prepare.py  strategy.py
data/: README.md  generate_sample.py  sample_NQ.csv
docs/: case-study-mr.md  case-study.md  generate_mr_visuals.py  generate_terminal.py  generate_visuals.py  launch-posts.md
examples/: rsi_mean_reversion.py  s5_reversion.py  sma_crossover.py
